--- a/package.json
+++ b/package.json
@@ -9,28 +9,14 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-ng-annotate": "^1.1.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.1",
-    "gulp-watch": "^4.3.5"
-  },
+  "devDependencies": {},
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.4.0",
     "body-parser": "^1.15.1",
     "cors": "^2.7.1",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "express-session": "^1.13.0",
     "express-sessions": "^1.0.5",
     "instagram-node": "^0.5.8",
